--- a/experience.Rmd
+++ b/experience.Rmd
@@ -2,7 +2,7 @@
 title: "Curriculum Vitae"
 ---
 
-<object data="experience/ZLB_Resume20250528.pdf" type="application/pdf" width="100%" height="800px" style="border: none;">
+<object data="experience/" type="application/pdf" width="100%" height="800px" style="border: none;">
     <p>It appears your browser does not support embedding PDFs.
     <a href="experience/ZLB_Resume20250528.pdf">Download the PDF file instead</a>.</p>
 </object>
